Fixed mobile undersection align
Fixed mobile undersection align

--- a/main.css
+++ b/main.css
@@ -31,6 +31,17 @@ body
     font-size: 200%;
 }
 
+
+#logo
+{
+    user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
 #content
 {
     padding-top: 5%;
