--- a/mobile.css
+++ b/mobile.css
@@ -54,7 +54,7 @@ body
 #undersection
 {
     float: right;
-    width: 50%;
+    width: 42%;
 
 
 }
